version 1.2.2:
  * reduce controller present and dismiss latency
    - add simple shutter to mask video start

version 1.2.1:
  * fix overlay resizing bug

version 1.2:
  * release updates

version 1.1.3:
  * fix UITabViewController rotation interaction

version 1.1.2:
  * add maxZoom for increasing zoom range
    - workaround camera preview initial location/size bug
  * add emulation for UI videoQuality to adjust camera resolution
  * fix several simulator-related bugs
    - fix device property missing from simulated ZBarReaderView
    - fix AVCaptureDevice referenced from ZBarReaderViewController
    - fix simulated camera gesture multiple recognition

version 1.1.1:
  * fix ReaderSample project path to ZBarSDK
  * README document new examples
    - make ReaderSample scheme public
  * documentation updates
  * add emulation for UI camera device and flash mode properties
  * workaround orientation bugs in parent controllers
    - enable orientation and iPad support for all examples
  * add orientation detection fall back
  * fix captureReader not exposed to simulator
  * fix camera preview stale rotation corner
    - fix ZBarReaderViewController toolbar layout accomodation
    - switch pre-release samples to use debug library
  * update docs to note possible link order dependency
  * add missing references to new samples
  * add IB support to ZBarReaderViewController
    - add tabbed reader sample
  * add embedded reader sample
    - factor out camera simulation logic
  * fix readertest max quality result filtering
    - thanks to John Boydon for finding this!
  * improve support for resizing, rotating and embedding the reader
  * add readertest fixed zoom stops
  * add manual frame capture
    - readertest save as PNG
  * enhance readertest to support default/demo pre-config and distribution
  * updates for Xcode 4
  * expose tracking box color

version 1.1:
  * fix doc typo (bug #3139087)
    - add modifier bit docs

version 1.0.1: